--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-hello
+<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>software</title>
+</head>
+<body>
+    <!-- <h1>I am Dipanshu kumar singh</h1> -->
+    <nav>
+       
+        <div>
+            <img src="/images/logo.png" alt="" srcset="">
+        </div>
+        <div>
+            <a href="section-home">Home</a>
+            <a href="section-projects">Project</a>
+            <a href="section-contact">Contact</a>
+        </div>
+    </nav>
+</body>
+</html>
