--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>software</title>
+    <style>
+        nav{
+            display: flex;
+            justify-content: space-between;
+            /* border: 3px solid; */
+            align-items: center;
+        }
+        div.link a{ 
+            /* border: 4px solid blue; */
+            padding: 5px;
+            border: 1px solid;
+            text-decoration: none;
+            color: blueviolet;
+            font-weight: bold;
+        }
+       
+    </style>
 </head>
 <body>
     <!-- <h1>I am Dipanshu kumar singh</h1> -->
-    <nav>
+    <nav >
        
         <div>
+            <!-- <div class="link"> -->
             <img src="/images/logo.png" alt="" srcset="">
         </div>
         <div>
+            <div class="link">
             <a href="section-home">Home</a>
             <a href="section-projects">Project</a>
             <a href="section-contact">Contact</a>
         </div>
+        </div>
+    <!-- </div> -->
     </nav>
 </body>
 </html>
