--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
         </div>
     <!-- </div> -->
     </nav>
+    <section id="section-home">
+        <div>
+            <h1>hey! I am Dipanshu Singh</h1>
+            <p>I am a software developer i have done too many project on the basis of fronted . I have done too many clones of e-commerece website</p>
+
+        </div>
+        <div>
+            <img src="/images/Dipanshu.JPG"  alt="" width="auto" height="350px">
+        </div>
+    </section>
 </body>
 </html>
