--- a/index.html
+++ b/index.html
@@ -75,5 +75,27 @@ background-color:rgb(198, 221, 230);
             <img src="/images/DSC_0362.JPG"  alt="" >
         </div>
     </section>
+
+    <section id="section-project">
+        <div>
+        <div>
+            <h1>Paymento</h1>
+            <p>Personal finance mobile</p>
+            <img src="/images/paymento.png" alt="">
+            
+        </div>
+        <div>
+            <h1>Taskit</h1>
+            <p>Task management app</p>
+            <img src="/images/taskit.png" alt="">
+
+        </div>
+    </div>
+    <div>
+        <h1>Piyuu</h1>
+        <p>Freelancing platform for individual</p>
+        <img src="/images/piyuu.png" alt="">
+    </div>
+    </section>
 </body>
 </html>
