--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         }
         #section-contact{
             display: flex;
-            justify-content: center;
+            justify-content:space-between;
             margin: 20px;
             padding: 20px;
             background-image: linear-gradient(to top right,rgb(255, 89, 0),rgb(0, 21, 128));
